评论页面ui完成
评论页面ui完成

--- a/app.wxss
+++ b/app.wxss
@@ -8,6 +8,7 @@ page{
   --theme-color: rgb(255,181,185);
   --theme-margin: 0 28rpx;
   --theme-padding: 0 28rpx;
+  --theme-gap:28rpx;
   height: 100vh;
   overflow: hidden;
 }
