--- a/common/components/card/card.wxml
+++ b/common/components/card/card.wxml
@@ -1,11 +1,11 @@
 <!--卡片-->
 <view class="card-container">
   <!--卡片标题-->
-  <view class="card-title card-title-class">
+  <view class="card-title card-title-class" wx:if="{{enabelTitle}}">
     <!--标题-->
     <text class="title">{{cardTitle}}</text>
     <!--"更多"按钮-->
-    <view class="card-button">
+    <view class="card-button" wx:if="{{enabelMore}}">
       <text>更多</text>
       <i-icon type="enter" size="14" style="margin-right: -11rpx" color="#777"/>
     </view>
