--- a/common/utils/func/tools.wxs
+++ b/common/utils/func/tools.wxs
@@ -5,6 +5,13 @@ var isEmpty = function(data){
   if (data.constructor == 'Object' && JSON.stringify(data)=='{}')return true
   return false
 }
+var isArrayInclude=function(array,value){
+  for (var i = 0; i < array.length;i++){
+    if(array[i]===value)return true
+  }
+  return false
+}
 module.exports = {
-  isEmpty: isEmpty
+  isEmpty: isEmpty,
+  isArrayInclude: isArrayInclude
 }
