--- a/subpackages-payment/components/vip-month-card/vip-month-card.wxss
+++ b/subpackages-payment/components/vip-month-card/vip-month-card.wxss
@@ -9,6 +9,7 @@
   justify-content: space-between;
   align-items: center;
   height: 280rpx;
+  width: 216rpx;
 }
 .active-border{
   border-color: var(--theme-color);
