--- a/common/components/bottom-modal/bottom-modal.wxss
+++ b/common/components/bottom-modal/bottom-modal.wxss
@@ -1,13 +1,13 @@
-back-icon{
+/* back-icon{
   margin-left:-12rpx;
   margin-right: 20rpx;
-}
+} */
 .bottom-modal{
   text-align: left;
 }
-.back-container{
+/* .back-container{
   align-items: center;
-}
+} */
 .modal-title{
   border-top-left-radius: 50rpx;
   border-top-right-radius: 50rpx;
@@ -15,8 +15,8 @@ back-icon{
 .modal-container{
   background-color: transparent;
 }
-.reply-count{
+/* .reply-count{
   color: #333;
   font-size: 30rpx;
   letter-spacing: 1px;
-}
+} */
