--- a/subpackages-comment/components/comment-item/comment-item.wxml
+++ b/subpackages-comment/components/comment-item/comment-item.wxml
@@ -4,27 +4,36 @@
   <view class="comment-title">
     <three-column-bar>
       <!--头像-->
-      <circular-item size="80" src="https://ossweb-img.qq.com/images/lol/web201310/skin/big84000.jpg" slot="left" />
+      <circular-item size="80" src="{{avator}}" slot="left" />
       <!--昵称和评论发布的时间-->
       <view slot="middle" class="name-and-time-container">
-        <text class="user-name one-row-flow">我是茯苓</text>
-        <text class="comment-time">2020年02月05日</text>
+        <text class="user-name one-row-flow">{{userName}}</text>
+        <text class="comment-time">{{tools.timestampToTime(commentDate)}}</text>
       </view>
       <!--点赞-->
       <view slot="right" class="thumb-up-container">
-        <text class="thumb-up-count">190</text>
-        <i-icon type="praise" size="20" color="#999" />
+        <text class="thumb-up-count {{isUp?'is-up':''}}">{{upCount}}</text>
+        <i-icon type="praise" size="20" color="#999" wx:if="{{!isUp}}" bindtap="changeUp"/>
+        <i-icon type="praise" size="20" color="{{themeColor}}" wx:else bindtap="changeUp"/>
       </view>
     </three-column-bar>
   </view>
   <!--评论内容-->
   <view class="comment-container" style="border-bottom:{{isShowBorder?'1rpx solid #eee':'none'}}">
-    <text user-select space="nbsp" decode class="comment-content">这首歌也太好听了吧！！！这首歌也太好听了吧！！！这首歌也太好听了吧！！！这首歌也太好听了吧！！！</text>
+    <view class="comment-content" catchtap="tapItem">
+      <block wx:if="{{!isMore && shortComment!=''}}">
+        <text space="nbsp" decode>{{shortComment}}</text><text space="nbsp" decode class="more-button" catchtap="changeIsMore">更多</text>
+      </block>
+      <block wx:elif="{{isMore && shortComment!=''}}">
+        <text>{{comment}}</text><text class="hidden-comment" catchtap="changeIsMore">收起</text>
+      </block>
+      <block wx:else>{{comment}}</block>
+    </view>
     <!--依据不同情况显示不同内容或者不显示-->
     <!--如果本条评论有回复-->
-    <block wx:if="{{reply}}">
+    <block wx:if="{{replyCount}}">
       <view class="comment-to-comment" bindtap="showReply">
-        <text>112条回复</text>
+        <text>{{replyCount}}条回复</text>
         <i-icon type="enter" size="12" color="{{themeColor}}" />
       </view>
     </block>
@@ -32,8 +41,8 @@
     <block wx:if="{{!tools.isEmpty(replyFromInfo)}}">
       <view class="comment-from-comment">
         <text>
-          <text class="comment-name">@你是茯苓:</text>
-        蛤蛤蛤蛤蛤蛤蛤蛤蛤蛤蛤蛤蛤蛤蛤蛤蛤蛤蛤蛤蛤蛤蛤蛤蛤蛤蛤蛤蛤蛤蛤蛤蛤蛤蛤蛤蛤蛤蛤蛤蛤蛤蛤蛤蛤蛤蛤蛤蛤蛤蛤蛤蛤蛤蛤蛤蛤
+          <text class="comment-name">@{{replyFromInfo.userName}}:</text>
+        {{replyFromInfo.comment}}
         </text>
       </view>
     </block>
