--- a/subpackages-comment/components/comment-item/comment-item.wxss
+++ b/subpackages-comment/components/comment-item/comment-item.wxss
@@ -9,22 +9,27 @@
   flex-direction: column;
   margin-left: 20rpx;
 }
-
+.is-up{
+  color: var(--theme-color)!important;
+}
 .thumb-up-container {
   display: flex;
   align-items: center;
 }
-
-.user-name {
+.hidden-comment,.more-button{
+  margin-left: 10rpx;
+  color: var(--theme-color);
+}
+.user-name { 
   color: #666;
-  font-size: 26rpx;
+  font-size: 28rpx;
   letter-spacing: 1px;
   line-height: 40rpx;
 }
 
 .comment-time {
-  color: #ccc;
-  font-size: 18rpx;
+  color: #999;
+  font-size: 20rpx;
   letter-spacing: 1px;
 }
 
@@ -59,7 +64,7 @@
 
 .comment-to-comment {
   color: var(--theme-color);
-  font-size: 22rpx;
+  font-size: 24rpx;
   display: flex;
   align-items: center;
   padding-top: 10px;
@@ -75,7 +80,7 @@
   padding-left: 18rpx;
   margin-top: 20rpx;
   color: #999;
-  font-size: 20rpx;
+  font-size: 25rpx;
   letter-spacing: 1px;
   line-height: 37rpx;
 }
