--- a/subpackages-payment/components/vip-month-card/vip-month-card.wxml
+++ b/subpackages-payment/components/vip-month-card/vip-month-card.wxml
@@ -1,5 +1,5 @@
 <view class="vip-month-card-container {{isActive?'active-border':'not-active-border'}}" bindtap="tap">
-  <text class="title">连续包月</text>
-  <text class="price">￥8</text>
-  <text class="price-per-month">￥8/月</text>
+  <text class="title">{{title}}</text>
+  <text class="price">￥{{sumPrice}}</text>
+  <text class="price-per-month">￥{{perMonthPrice}}/月</text>
 </view>
